// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Movie Card Expanded 1`] = `
<li
  className="MuiGridListTile-root"
>
  <div
    className="MuiGridListTile-tile"
  >
    <div
      className="MuiPaper-root MuiCard-root MovieCard-card-7 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        className="MuiCardHeader-root"
      >
        <div
          className="MuiCardHeader-avatar"
        >
          <div
            aria-label="Movie"
            className="MuiAvatar-root MuiAvatar-circle MovieCard-avatar-12 MuiAvatar-colorDefault"
          >
            D
          </div>
        </div>
        <div
          className="MuiCardHeader-content"
        >
          <span
            className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
          >
            Die Hard
          </span>
          <span
            className="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            jan 21 2019
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root MovieCard-media-8"
        style={
          Object {
            "backgroundImage": "url(\\"someSrc\\")",
          }
        }
        title="Die Hard"
      />
      <div
        className="MuiCardActions-root MovieCard-actions-9"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
        >
          Overview
        </p>
        <button
          aria-expanded={true}
          aria-label="Show more"
          className="MuiButtonBase-root MuiIconButton-root MovieCard-expand-10 MovieCard-expandOpen-11"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="MuiCollapse-container MuiCollapse-entered"
        style={
          Object {
            "minHeight": "0px",
          }
        }
      >
        <div
          className="MuiCollapse-wrapper"
        >
          <div
            className="MuiCollapse-wrapperInner"
          >
            <div
              className="MuiCardContent-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
              >
                NYPD cop John McClane's plan to reconcile with his 
estranged wife is thrown for a serious loop when, minutes after he arrives 
at her office, the entire building is overtaken by a group of terrorists. 
With little help from the LAPD, wisecracking McClane sets out to single-handedly 
rescue the hostages and bring the bad guys down.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`Storyshots Movie Card With Title 1`] = `
<li
  className="MuiGridListTile-root"
>
  <div
    className="MuiGridListTile-tile"
  >
    <div
      className="MuiPaper-root MuiCard-root MovieCard-card-1 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        className="MuiCardHeader-root"
      >
        <div
          className="MuiCardHeader-avatar"
        >
          <div
            aria-label="Movie"
            className="MuiAvatar-root MuiAvatar-circle MovieCard-avatar-6 MuiAvatar-colorDefault"
          >
            D
          </div>
        </div>
        <div
          className="MuiCardHeader-content"
        >
          <span
            className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
          >
            Die Hard
          </span>
          <span
            className="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            jan 21 2019
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root MovieCard-media-2"
        style={
          Object {
            "backgroundImage": "url(\\"someSrc\\")",
          }
        }
        title="Die Hard"
      />
      <div
        className="MuiCardActions-root MovieCard-actions-3"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
        >
          Overview
        </p>
        <button
          aria-label="Show more"
          className="MuiButtonBase-root MuiIconButton-root MovieCard-expand-4"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</li>
`;

exports[`Storyshots Search App Bar Default 1`] = `
<div
  className="SearchAppBar-root-13"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary SearchAppBar-root-13 MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h5
        className="MuiTypography-root SearchAppBar-grow-14 MuiTypography-h5 MuiTypography-colorInherit"
      />
    </div>
  </header>
</div>
`;

exports[`Storyshots Search App Bar With Title 1`] = `
<div
  className="SearchAppBar-root-20"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary SearchAppBar-root-20 MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h5
        className="MuiTypography-root SearchAppBar-grow-21 MuiTypography-h5 MuiTypography-colorInherit"
      >
        Movies for Sean!!
      </h5>
    </div>
  </header>
</div>
`;

exports[`Storyshots Search App Bar With children 1`] = `
<div
  className="SearchAppBar-root-27"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary SearchAppBar-root-27 MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h5
        className="MuiTypography-root SearchAppBar-grow-28 MuiTypography-h5 MuiTypography-colorInherit"
      />
      <div>
        I'm a child node!!
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Search Box Default 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-flex-end"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 "
        data-icon="search"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="movie-title-input"
          id="movie-title-input-label"
        >
          Enter your movie title
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="movie-title-input"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
